[FIX] Bug in IE7 that made left menu to overlap the content on right.

--- a/addons/openerp/static/css/screen.css
+++ b/addons/openerp/static/css/screen.css
@@ -585,6 +585,11 @@ p#cmp_logo {
     min-height: 100%;
     vertical-align: top;
     padding: 0;
+    width: 100%;
+}
+
+#primary.first-page-primary {
+	width: 70%;
 }
 
 #primary div.wrap {
